--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -28,6 +28,12 @@
 			<a type="button" class="btn btn-default btn-lg" th:href="@{/Catering}" >Login</a>
 			<a type="button" class="btn btn-default btn-lg" th:href="@{/Customer}" >Register New Customer</a>
         </div>
+        <div class="row text-center" style="margin-top:40px">
+			<h4>Coded and Designed By</h4>
+        </div>
+        <div class="row text-center">
+			<img alt="Sevket_Ozturk_logo" src="pictures/sevket_ozturk_logo.png" height="78px">
+        </div>
     </div>
 </body>
 </html>
